--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # don't track crime data
 analysis/data/BKA
 
-# don't track temp in output folder, except dummy dataset (mit ! arbeiten)
+# don't track temp & graphs in output folder, except dummy dataset (mit ! arbeiten)
 analysis/output/temp/*
-
+analysis/output/graphs/*
 
 # filetypes:
 *-blx.bib
