--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ TeX/paper/soc_ext_bibliography.bib
 TeX/paper/soc_ext_bibliography.bib.bak
 
 TeX/paper/soc_ext_bibliography.bib.sav
+
+TeX/presentations/logo_ifo.eps
+
+TeX/presentations/mgse_logo.jpg
