--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ TeX/paper/soc_ext_bibliography.bib.sav
 TeX/presentations/logo_ifo.eps
 
 TeX/presentations/mgse_logo.jpg
+
+analysis/output/presentation/
