ignore old file (sandbox)

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@ analysis/output/presentation/
 TeX/presentations/Thumbs.db
 
 TeX/presentations/log/
+
+analysis/prog/analysis/old_soc_ext_analysis_emotional_cues.do
